--- a/package.json
+++ b/package.json
@@ -28,11 +28,20 @@
   "homepage": "https://github.com/tylergrinn/webpack-5#readme",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "css-loader": "^4.3.0",
     "eslint": "^7.11.0",
     "eslint-config-alloy": "^3.8.0",
+    "html-webpack-plugin": "^4.5.0",
     "http-server": "^0.12.3",
+    "jsdom": "^16.4.0",
+    "mini-css-extract-plugin": "^1.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "reload": "^3.1.1",
-    "surge": "^0.21.6"
+    "surge": "^0.21.6",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   }
 }
