Added naive webpack config

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "reload --browser --dir src",
+    "build": "webpack",
     "quality": "prettier --write . && eslint . --fix",
     "quality:check": "prettier -c . && eslint .",
     "deploy:login": "surge login",
